<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
             https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.extractor</groupId>
    <artifactId>monolith-extractor</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Java Monolith Module Extractor</name>
    <description>Scans Java repositories, builds a dependency graph, and identifies extraction candidates.</description>

    <modules>
        <module>extractor-core</module>
        <module>extractor-graph</module>
        <module>extractor-ingestion</module>
        <module>extractor-analysis</module>
        <module>extractor-search</module>
        <module>extractor-api</module>
    </modules>

    <properties>
        <java.version>1.8</java.version>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- Framework versions -->
        <spring-boot.version>2.7.18</spring-boot.version>

        <!-- Graph library (replaces Neo4j) -->
        <jgrapht.version>1.4.0</jgrapht.version>

        <!-- Parsing & Analysis -->
        <javaparser.version>3.25.4</javaparser.version>
        <asm.version>9.6</asm.version>

        <!-- VCS -->
        <jgit.version>5.13.3.202401111512-r</jgit.version>

        <!-- Build tool APIs -->
        <maven-invoker.version>3.2.0</maven-invoker.version>
        <gradle-tooling.version>8.5</gradle-tooling.version>

        <!-- Testing -->
        <testcontainers.version>1.19.3</testcontainers.version>

        <!-- Utilities -->
        <lombok.version>1.18.30</lombok.version>

        <!-- Plugin versions -->
        <maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
        <maven-surefire-plugin.version>3.2.3</maven-surefire-plugin.version>
        <maven-failsafe-plugin.version>3.2.3</maven-failsafe-plugin.version>
        <spring-boot-maven-plugin.version>${spring-boot.version}</spring-boot-maven-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot BOM -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Testcontainers BOM -->
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>${testcontainers.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Internal modules -->
            <dependency>
                <groupId>com.extractor</groupId>
                <artifactId>extractor-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.extractor</groupId>
                <artifactId>extractor-graph</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.extractor</groupId>
                <artifactId>extractor-ingestion</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.extractor</groupId>
                <artifactId>extractor-analysis</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.extractor</groupId>
                <artifactId>extractor-search</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- JavaParser -->
            <dependency>
                <groupId>com.github.javaparser</groupId>
                <artifactId>javaparser-symbol-solver-core</artifactId>
                <version>${javaparser.version}</version>
            </dependency>

            <!-- ASM -->
            <dependency>
                <groupId>org.ow2.asm</groupId>
                <artifactId>asm</artifactId>
                <version>${asm.version}</version>
            </dependency>

            <!-- JGit -->
            <dependency>
                <groupId>org.eclipse.jgit</groupId>
                <artifactId>org.eclipse.jgit</artifactId>
                <version>${jgit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jgit</groupId>
                <artifactId>org.eclipse.jgit.ssh.apache</artifactId>
                <version>${jgit.version}</version>
            </dependency>

            <!-- Maven Invoker -->
            <dependency>
                <groupId>org.apache.maven.shared</groupId>
                <artifactId>maven-invoker</artifactId>
                <version>${maven-invoker.version}</version>
            </dependency>

            <!-- Gradle Tooling API -->
            <dependency>
                <groupId>org.gradle</groupId>
                <artifactId>gradle-tooling-api</artifactId>
                <version>${gradle-tooling.version}</version>
            </dependency>

            <!-- Lombok -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>

            <!-- Awaitility for async test assertions -->
            <dependency>
                <groupId>org.awaitility</groupId>
                <artifactId>awaitility</artifactId>
                <version>4.2.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- Common dependencies for all modules -->
    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                        <parameters>true</parameters>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${maven-failsafe-plugin.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot-maven-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <repositories>
        <repository>
            <id>gradle-libs</id>
            <url>https://repo.gradle.org/gradle/libs-releases</url>
        </repository>
    </repositories>
</project>
